--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ futures-util = "0.3"
 url = "^2.5"
 anyhow = "1.0.80"
 multipart-2021 = "0.19.0"
+async-trait = "0.1.80"
 
 [features]
 default = []
